--- a/.abf.yml
+++ b/.abf.yml
@@ -1,3 +1,3 @@
 sources:
-  "hyperref-docsrc.doc.tar.xz": eef45fc617bbc9671e830de37ba19a6d9a228bf7
-  "hyperref-docsrc.tar.xz": 036c1899c2fa93e352b6777609d1e6b5b5fc4941
+  hyperref-docsrc.doc.tar.xz: 6cccfd9cd595592cbf37bd219cf73f7d4a3af28c
+  hyperref-docsrc.tar.xz: 15f066edb3857e6f72530bba737876a6c88313e9
